[gd_scene load_steps=3 format=2]

[ext_resource path="res://tutorial/tutorial.gd" type="Script" id=1]
[ext_resource path="res://fonts/xolonium/Xolonium_big.tres" type="DynamicFont" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 1 )

[node name="NextInfoTimer" type="Timer" parent="."]

[node name="UpperContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -0.160034
margin_bottom = 0.14798
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperLabel" type="Label" parent="UpperContainer"]
margin_left = 460.0
margin_top = 177.0
margin_right = 818.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 2 )
text = "Spaceships go vroom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerContainer" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.003
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = 0.159912
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerLabel" type="Label" parent="LowerContainer"]
margin_left = 582.0
margin_top = 176.0
margin_right = 703.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 2 )
text = "Whooo"

[connection signal="timeout" from="NextInfoTimer" to="." method="_on_NextInfoTimer_timeout"]
